--- a/report/jasmine.html
+++ b/report/jasmine.html
@@ -26,7 +26,9 @@
   
   <script src="../src/ObjectEventTarget.js"></script>
   
-  <script src="../test/specs/EventTarget.js"></script>
+  <script src="../test/specs/ObjectEvent.js"></script>
+  
+  <script src="../test/specs/ObjectEventTarget.js"></script>
   
   <script src="../test/specs/WeakMapsShim.js"></script>
   
