Added support a event bubbling

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src="ObjectEventTarget.js"></script>
+<script src="src/ObjectEventTarget.js"></script>
 </head>
 <body>
 EventTarget test page
